# deep_dive_into_django_rest_framework

DRF/: Dockerfile  compose.yaml  pyproject.toml
DRF/drf/: settings.py
Postgres/: compose.yaml  compose.yml
